--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI-CD-Pipeline-to-AWS-ElasticBeanstalk
+name: CI-CD-Pipeline
 env:
   EB_PACKAGE_S3_BUCKET_NAME : "zzz.flask-app"
   EB_APPLICATION_NAME       : "MyFlask"
