--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
          - name: Print nice message on completion of CI Pipeline
            run : echo "CI Pipeline part finished successfully"
            
-    my_cd_pipeline:
+    my_cd_pipeline1:
        runs-on: ubuntu-latest
        needs: [my_ci_pipeline]
        
