--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,9 @@ jobs:
        runs-on: ubuntu-latest
        
        steps:
-         - name: Git clone our repository
-           uses: actions/checkout@v1
+        - uses: actions/checkout@v3
+          with:
+            repository: 'jerrytest199-patch-1'
             
          - name: Create ZIP deployment package
            run : zip -r ${{ env.DEPLOY_PACKAGE_NAME }} ./  -x  *.git*
