--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ env:
   EB_PACKAGE_S3_BUCKET_NAME : "adv-it-flask"
   EB_APPLICATION_NAME       : "flask-app2"
   EB_ENVIRONMENT_NAME       : "Flask-app2-env"
-  DEPLOY_PACKAGE_NAME       : "flask-app-${{ git2hub.sha }}.zip"
+  DEPLOY_PACKAGE_NAME       : "flask-app-${{ github.sha }}.zip"
   AWS_REGION_NAME           : "eu-central-1"
 
 on: workflow_dispatch
