--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,8 @@ jobs:
              aws-access-key-id    : ${{ secrets.MY_AWS_ACCESS_KEY }}
              aws-secret-access-key: ${{ secrets.MY_AWS_SECRET_KEY }}
              aws-region           : ${{ env.AWS_REGION_NAME }}
-
+         - name: GG
+           run: git rm --cached github-actions-part2-cicd-to-aws
          - name: Copy our Deployment package to S3 bucket
            run : aws s3 cp ${{ env.DEPLOY_PACKAGE_NAME }} s3://${{ env.EB_PACKAGE_S3_BUCKET_NAME}}/
          
@@ -38,7 +39,7 @@ jobs:
        
        steps:
          - name: Configure my AWS Credentils
-           uses: aws-actions/configure-aws-credentials@v1
+           uses: aws-actions/configure-aws-credentials@v2
            with:
              aws-access-key-id    : ${{ secrets.MY_AWS_ACCESS_KEY }}
              aws-secret-access-key: ${{ secrets.MY_AWS_SECRET_KEY }}
