--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,5 +59,5 @@ jobs:
            run : aws elasticbeanstalk update-environment --environment-name ${{ env.EB_ENVIRONMENT_NAME }} --version-label "Ver-${{ github.sha }}"
            
          - name: Print nice message on completion of CD Pipeline
-           run : echo "CD Pipeline part finished successfully"  
+           run : echo "CD Pipeline part finished successddfully"  
         
